# ChangeLog for dev-util/cpuinfo-collection
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cpuinfo-collection/ChangeLog,v 1.6 2012/12/16 22:32:08 ulm Exp $

  16 Dec 2012; Ulrich Müller <ulm@gentoo.org>
  cpuinfo-collection-20060720.ebuild, cpuinfo-collection-20070104.ebuild:
  Fix LICENSE, bug 447394.

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org>
  cpuinfo-collection-20060720.ebuild, cpuinfo-collection-20070104.ebuild:
  Drop to ~mips

*cpuinfo-collection-20070104 (09 Jan 2007)

  09 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +cpuinfo-collection-20070104.ebuild:
  Version bump.

*cpuinfo-collection-20060720 (26 Jul 2006)

  26 Jul 2006; Mike Frysinger <vapier@gentoo.org>
  +cpuinfo-collection-20060720.ebuild:
  Version bump.

*cpuinfo-collection-20040314 (06 Jan 2004)

  06 Jan 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.