@@ -2,25 +2,27 @@
 Hash: SHA256
 
 DIST test_proc-04January2007.tar.gz 28831 SHA256 8b8cf833b115955d40ac6a672a2dd1b748f2771c92fa9a669330e5b67584c23f SHA512 6ff9f42c0847ef897069a7b36ad184b05ac022d1db5ab581e87d2992ee2a511218ef2019a0a94aadb91038e2b99e530618b0b6a380b0aa36f4178620e6719922 WHIRLPOOL a170f4a175abbf4b23daa5a4fbd33ea9556daeb4afe32272980d6a4c3dc8c749f700ffc24b7213f79adf4216f6fdd04d147093cdc4a7a33fb364c2df5dbeea9d
+DIST test_proc-14November2010.tar.gz 95697 SHA256 74dd45840d51d6a5bd73fdbed5d5231f17669a47ddecc5c784ea85aa84181046 SHA512 2f3b80d9b705b76911487b7349300b45622a3a49b9a3c2036d96220738e7fd525114b2523cc589b03d0fdf85ca4d35c28076ff193d1eb620d71765919058fdc6 WHIRLPOOL 08982297ad232b8c08ca8900a1969c65d65edef32e089e87d317ed7ba1f05036c2614cb505fe85dea01c0496021e3e4ff539568ad2bd8febbd88dbab75878b50
 DIST test_proc-20July2006.tar.gz 27570 SHA256 b97e3344ca9b0a38a96853b2ce88e9989f69f246965f1065323402d330e873ad SHA512 c76f59a2b51e414a45c346a8a1334a905be6e5f7ea12f8a2cc92f44048bf0af66b548768910aa07287a4084c675310b6c4cdabc86640705382d654117357b2a8 WHIRLPOOL a0d7348968ea8f1d71bb999e7e9b8418b9cf716dec1b10529cb5452c28c8737221b6f0f67ebef2eb5edaafbe3b51ed94acafff2de33d0edc810ac30011fb7d95
 EBUILD cpuinfo-collection-20060720.ebuild 669 SHA256 25202664970c9e43b6fd58774e8e06a96522b7297d9a00b156e26815e74e7002 SHA512 17c716bdfaff74f8fa632bd13012a07c48396464e6aed044a65a9812711768387333e020359510f44c9c70348fff10c6e5616c0a23d0a201e63bf5af71d4cc29 WHIRLPOOL 6070275b541e9b8b0994328e1f87e2d29f3cfc60c592139c77d3b517d5baff3a5df6085f8cf0162959574eb6c06eec230e3a882f868c10f77d35a181cd911ab7
 EBUILD cpuinfo-collection-20070104.ebuild 684 SHA256 878d81c52617416909db3dcb82af260501292bb7c2881273b38a2eade735b770 SHA512 65bea2e77a4db7e0586058b0d642ae55ec3ae1f922f06ae135e66f719974d80f98b34ec34c55950a1b7b3ac1fac6e209c6c485a2813e9056d8985cd1787e501d WHIRLPOOL 6bfe6e9e2f5b2148961ef42bb5495b2a69a36a1ec114c171ec15a2448a9308bb7ddb3226e706b351e4c815c2090acc45fbb061af5df987afa9e0b6c522e40a97
-MISC ChangeLog 950 SHA256 faddecedb5cc64019390601a973b996ec4bb6ae4e739288b265b0cd6c99d92ed SHA512 a4cc3137dce931687b12bbfbe8df699332ab1c7e7d55b3cbb60db7c7c2e5f5cdd74682826fc7240259a6116e688e063eb3aedd06be9156037e5e164641861222 WHIRLPOOL de7ff9f7c1a74a31daa93b892a634f078f39f6d46a2bac6197284e875285fd5f6ae2f546d15f03b092dd503475fc20f75cede026e45ff253891698ff10ffbefa
+EBUILD cpuinfo-collection-20101114.ebuild 706 SHA256 77f33c8b8ec090c41ef4354eb4d0eeeb7df85692e545ba2aa6f7fb7c9675b56f SHA512 161797d669ffb5d950f8b481f0f13c76f53489d3898791ee7432cb5d852f237f08b6072108dc9fd17ffc54ef4e7a222916dc5f2ebf54d4bbabc548198db188a3 WHIRLPOOL d0bb21ca97b96bb66597bfb73427cd59d6222cf453d97198e108a47b4a8fb616afcb6df0bc8fb3139beb7322f53b10265fd8f3f906cc2feb7c4bb2505a27f08e
+MISC ChangeLog 1103 SHA256 b04b832c0d21622a4c36c5c09928c1c24a69b36858a133ce83005dfbb09f3b0f SHA512 1773d58d7a61a7b69a766ca08bd104492a4cde301d21f3e39ed099221f5769f5d2791f3c0906329727347ae8f6fd862065670b069a904a6c3f3f6d483f454b46 WHIRLPOOL 5216b8e8259cc451594a4d5a3499e3eedd578d70b6649ae882b05f613a379be4956edc6c67fd2f19e03c4f484a985ccc24de0b5bb6e6adaaba4ad2e2b0ee4f24
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQIbBAEBCAAGBQJQzkxdAAoJEDxpGckxwJCB/fIP9i6u7XjGSYy2vGvSkZBmF1/G
-779o5igFbUWMYL7XsIsuLMbHKiDx17d9DKDA4jAG1dhIcsu4ZIAPtP6TGEZBKSQI
-bu4gV8S87NSn+61bsghnxNBdDK1XxPd6+v53YWOxCcJnWlvkGldT94qXmJPtWYgs
-hMa4mN+JpyvuaO/1bD25mjSByxwhs9LJ3z0ZjP01J31AZLEFALCLtITXptwuaLpM
-zE2esPE5nLp7Z0gfflQCZBH+Q83iUigdFqBangdcG7KF/wxwmnzs4mPATg8txJSC
-NCDyfR5HZV6lZVOtEsZX7VE37DxFP9tjTpoC5R5CWOCXjkn/VHZNB30DHZA9TbBf
-nzmt+swyClcIRzpM9E6m4HtQX4n2YorFDg0Mzo3Inp23q6qZOOaXFJoIIPkgcgee
-7uNSWH0TlGze74H1Ls8AfOV3kRAjLm02x50EXZpy5YJBRVFfvdRmvhfcp2kQ/Y/4
-0xqwKdk8nPcYWL1j3g8NNX3j+t6BKS779QTfycBTS1yuzHtVRJ+WeGEvod9QOaRT
-Ji07rgkPY4/eGqMoQvCz13XzHaRsb8RrvQmYqscsEZE6XCfQHuIiT5DWcGEf0zt7
-h2s6CkrpI3RXXjjMJJ/RElyCokWXfoE9xtdMACDg0EYZW+J5ECkOwKQec6vOsRNo
-PAcC8UwIjW9ex2aHCk4=
-=tOaF
+iQIcBAEBCAAGBQJVwZL/AAoJEPGu1DbS6WIAe/sP/3y842xYOIRtk+Emoq2vkO0h
+A0mOSBg0OVKVCihb1An4NUAK+iLIUdKUS41mXFXoi8qYgZAjJqP4qkGRkHhEXRlw
+oAr5iOMZ20Sg551mpvJpei/XmXhu6X860aaP01F7vOHl/m8JGordBf53/q7cRyE0
+vKiR6c+aHU8Uj+4RV6HYYWknP5+k8cahQhpeGiLUkaBHJeqAj3IveXeEZQeGrMCI
+we6rscZiKdLf1EQHOZVnRPsIfs+2Bf1sAd1Q6D1JEG59/c+udMYBgs3Z0Sv1/IZk
+jYX3gg9fmqbQLXcrTfcaMh88X24dY7xeyfZMbyg452ch2czxay9J1ChjhqCasVfG
+ExrCmUHU0stZGEvOhKhgcjN2LVvC0HPrKqVlbaBUwqEnusSqpQAk6S3nazdXfGye
+ECcwaLB5NlU50ztMfh/XfIR8Oux7LkEqQLPTWfgSuO6L/u4tyIXjWHbKW96uNg2E
+iE4iJLSKmD85cg2U8xVZWBQFbiNR3oMfE97qxAi4IZI2s/5uTfzJdKjII8I898zR
+6bhQ8jh3OMys66phREulCjDL6aafLUpgGQC1BYhhkwOMVd5TH3cEz8ZrENiyN9Gw
+aK8pWvnY4qSB5Afe0TlUrvVwIcpyZvyDfUoSeLkL4SVoeRZZJtyB5YOx2k9a361+
+E/xe2KQQZ/iIl8V3oU5L
+=ExeO
 -----END PGP SIGNATURE-----
