@@ -1,0 +1,9 @@
+DEFINED_PHASES=install
+DESCRIPTION=huge collection of /proc/cpuinfo files
+EAPI=5
+HOMEPAGE=http://www.deater.net/weave/vmwprod/linux_logo/
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+LICENSE=public-domain
+SLOT=0
+SRC_URI=http://www.deater.net/weave/vmwprod/linux_logo/test_proc-14November2010.tar.gz
+_md5_=f68dd6b477e429f3f53396422bb9c872
